fixes alignment for search box

--- a/src/shared/modules/header/sub/sub.component.scss
+++ b/src/shared/modules/header/sub/sub.component.scss
@@ -96,24 +96,26 @@
     maxhealth-question {
       > div {
         display: flex;
-        //align-items: center;
+        align-items: center;
         mat-label {
           width: 35%;
           font-size: 12px;
-          padding-top: 0.5rem;
         }
         mat-form-field {
           width: 75% !important;
           font-size: 12px;
+          .mat-form-field-wrapper {
+            padding-bottom: 0;
+          }
         }
       }
     }
   }
 }
-.search-note{
+.search-note {
   font-size: 10px;
   font-family: proxima;
-  font-style: normal; 
+  font-style: normal;
   color: red;
-  float:left;
+  float: left;
 }
